--- a/references.bib
+++ b/references.bib
@@ -61,22 +61,22 @@
   address = {Berlin, DE},
 }
 
-@manual{IOTAwhitepaper,
+@misc{IOTAwhitepaper,
   Author = {S. Popov.},
   title = {Iota whitepaper. Technical White Paper},
-  url = {https://iota.org/IOTA_Whitepaper.pdf},
+  howpublished= {\url{https://iota.org/IOTA_Whitepaper.pdf}},
   urldate = {2018-04-30}
 }
 
 @misc{MAM,
   title = {Masked Authenticated Messaging},
-  url = {https://blog.iota.org/introducing-masked-authenticated-messaging-e55c1822d50e},
+  howpublished= {\url{https://blog.iota.org/introducing-masked-authenticated-messaging-e55c1822d50e}},
   urldate = {2017-11-05}
 }
 
 @misc{MAMSpec,
   title = {Masked Authenticated Messaging Version 2 Protocol},
-  url = {https://github.com/iotaledger/entangled/blob/develop/mam/spec.pdf},
+  howpublished= {\url{https://github.com/iotaledger/entangled/blob/develop/mam/spec.pdf}},
   urldate = {2019-03-07}
 }
 
@@ -93,7 +93,7 @@
 
 @misc{IOTADataMarket,
   title = {IOTA Data Marketplace},
-  url = {https://data.iota.org},
+  howpublished= {\url{https://data.iota.org}},
 }
 
 @inproceedings{3tierDataMarket,
@@ -104,27 +104,27 @@
   Eprinttype = {arXiv},
 }
 
-@misc{IPFS,
-  Author = {Juan Benet},
-  Title = {IPFS - Content Addressed, Versioned, P2P File System},
-  Year = {2014},
-  Eprint = {1407.3561},
-  Eprinttype = {arXiv},
+@article{IPFS,
+  author = {Benet, Juan},
+  year = {2014},
+  month = {07},
+  pages = {},
+  title = {IPFS - Content Addressed, Versioned, P2P File System},
 }
 
-@manual{smartContract,
-  title = {ethereum/wiki},
-  url = {https://github.com/ethereum/wiki/wiki/White-Paper},
+@misc{smartContract,
+  title = {A Next-Generation Smart Contract and Decentralized Application Platform},
+  howpublished= {\url{https://github.com/ethereum/wiki/wiki/White-Paper}},
 }
 
 @misc{TangleID,
   title = {TangleID},
-  url = {https://tangleid.github.io},
+  howpublished= {\url{https://tangleid.github.io}},
 }
 
 @misc{DID,
-  title = {Decentralized Identifiers },
-  url = {https://w3c-ccg.github.io/did-spec/},
+  title = {Decentralized Identifiers (DIDs) v1.0},
+  howpublished= {\url{https://w3c-ccg.github.io/did-spec/}},
 }
 
 @inproceedings{GDPR,
@@ -191,7 +191,7 @@ year = {2002},
 	title = {Ethereum: A secure decentralised generalised transaction ledger EIP-150 REVISION (759dccd - 2017-08-07)},
 	journal = {Ethereum Project Yellow Paper},
 	year = {2017},
-	url = {https://ethereum.github.io/yellowpaper/paper.pdf},
+	howpublished= {\url{https://ethereum.github.io/yellowpaper/paper.pdf}},
 }
 
 @inproceedings{Snark,
@@ -223,7 +223,7 @@ year = {2002},
 
 @misc{Entangled,
 	title = {Masked Authenticated Messaging, entangled},
-	url = {https://github.com/iotaledger/entangled/tree/develop/mam},
+	howpublished= {\url{https://github.com/iotaledger/entangled/tree/develop/mam}},
 }
 
 @article{MSS,
