--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,7 @@
 %  In case you need support, please attach all files that are necessary for compiling as well as the log file, and specify the details of your LaTeX setup (which operating system and LaTeX version / tools you are using).
 
 %=================================================================
-\documentclass[journal,article,submit,moreauthors,pdftex]{Definitions/mdpi} 
+\documentclass[journal,article,applsci,submit,moreauthors,pdftex]{Definitions/mdpi} 
 \graphicspath{ {./images/} }
 % If you would like to post an early version of this manuscript as a preprint, you may use preprint as the journal and change 'submit' to 'accept'. The document class line would be, e.g., \documentclass[preprints,article,accept,moreauthors,pdftex]{mdpi}. This is especially recommended for submission to arXiv, where line numbers should be removed before posting. For preprints.org, the editorial staff will make this change immediately prior to posting.
 
@@ -338,7 +338,7 @@ The trading process is shown in Figure \ref{fig:key_exchange}. The data provider
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=6 in]{key_exchange}
+    \includegraphics[width=5.5 in]{key_exchange}
     \caption{Session key exchange process between the data provider and consumer.}
     \label{fig:key_exchange}
 \end{figure}
