--- a/paper.tex
+++ b/paper.tex
@@ -558,7 +558,7 @@ In this experiment, we investigate the cost of executing smart contracts. We imp
 	}
 \end{lstlisting}
 
-To create a Product Contract (Listing \ref{lst:constructor}), the broker publishes the address of the data provider, subscription fee, brokerage fee, threshold of consent votes of refunding, the channel root and endpoint of MAM channel, and expected number of streaming data.
+To create a Product Contract (Listing \ref{lst:constructor}), metadata such as the address of the data provider, subscription fee, brokerage fee, threshold of consent votes of refunding, the channel root and endpoint of MAM channel, and expected number of streaming data should be defined and initialized when the contract is deployed by the broker. A Product Contract also records the process of session key certification and exchange, and prevents transactions of invalid behaviors, such as certifying multiple session keys by the data provider to cheat consumers, from changing the contract state.
 
 \begin{lstlisting}[caption={update blinded key and update signature}, label={lst:key_certification}, frame=single]
 	function addBlindedKey(
@@ -615,7 +615,7 @@ Before a data provider asks a broker to certify a session key, he blinds the ses
 	\end{tabular}
 \end{table}
 
-Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor}) costs the most gas, and functions (Listing \ref{lst:key_exchange} and Listing \ref{lst:key_certification}) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero according to Ethereum Yellow Paper\cite{Ethereum}. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption. To certify session keys, blind signature is used and the whole process is recorded in the smart contract. However, storage on blockchain is expensive and blind signature is an interactive protocol which requires multi-steps of communications between broker and data provider. We are going to explore the usage of the non-interactive zero knowledge protocol such as zk-SNARKS(zero-knowledge succinct non-interactive argument of knowledge)\cite{Snark} to reduce network and storage cost and improve privacy and security of session keys in our future work. On the other hand, we can observe that the broker is responsible for the most part of transaction fees while consumers only need to send one transaction to subscribe the product if they don't have to refund.
+Table \ref{tab:gas} shows the gas usage for each function. Creating a smart contract (Listing \ref{lst:constructor}) costs the most gas, and functions (Listing \ref{lst:key_exchange} and Listing \ref{lst:key_certification}) that are related to key certification and key exchange need a lot of gas as well. Storage on blockchain costs a lot. It is expensive to use memory in Solidity. For instance, an SSTORE operation may cost 20000 gas when the value is set to non-zero from zero according to Ethereum Yellow Paper\cite{Ethereum}. Smart contract initialization, storing ciphertexts and signatures during key certification and key exchange needs a lot of operations and storages which causes high gas consumption. To certify session keys, blind signature is used and the whole process is recorded in the smart contract. However, storage on blockchain is expensive and blind signature is an interactive protocol which requires multi-steps of communications between broker and data provider. In our future work, we are going to explore the usage of the non-interactive zero knowledge protocol such as zk-SNARKS(zero-knowledge succinct non-interactive argument of knowledge)\cite{Snark} which can generate proofs off-chain and simplify the verification process that could not only reduce network and storage cost but also improve the privacy and security of session keys. On the other hand, we can observe that the broker is responsible for the most part of transaction fees while consumers only need to send one transaction to subscribe the product if they don't have to refund.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Bulleted lists look like this:
